Adjustment lg breakpoint + adding of README.md

--- a/style.css
+++ b/style.css
@@ -120,4 +120,11 @@ h1 {
     .container {
         max-width: 900px;
     }
+
+    .attribution {
+        position: absolute;
+        bottom: 0;
+        left: 50%;
+        transform: translateX(-50%);
+    }
 }
