--- a/style.css
+++ b/style.css
@@ -104,21 +104,13 @@ h1 {
 }
 
 @media (min-width: 768px) {
-    section {
-        display: flex;
-        flex-direction: column;
-        align-items: space-between;
-    }
-
     .container {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
         width: 90%;
         flex-direction: row;
-    }
-}
-
-@media (min-width: 992px) {
-    .container {
-        max-width: 900px;
     }
 
     .attribution {
@@ -126,5 +118,11 @@ h1 {
         bottom: 0;
         left: 50%;
         transform: translateX(-50%);
+    }
+}
+
+@media (min-width: 992px) {
+    .container {
+        max-width: 900px;
     }
 }
